# scRNA-DataHub

./: CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_CN.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test_dnb_c4.sh  verify_project.sh  公众号文章-精简版.md  公众号文章.md  推广材料索引.md  推广计划.md  朋友圈推广文案.md  目录结构说明.md  精简完成.md  项目完成总结.md  项目概览.md
docs/: README.md  api_reference.md  data_formats.md  dnb_c4_format.md  environment_management.md  faq.md  installation.md  quickstart.md  test_data_guide.md  test_data_sources.md  troubleshooting.md  user_guide.md  version_compatibility.md
examples/: basic_usage.py  batch_processing.py  multi_sample.py
scripts/: create_test_data.py  quick_test.sh
scripts/test_data_all_formats/: QUICK_START.sh  README.md  run_all_format_tests_simple.sh  test_data.hdf5  test_data.loom  test_data_manifest.txt  test_expression.csv  test_expression.tsv  test_expression.xlsx  test_matrix.mtx
scripts/test_data_all_formats/cache/: storeData-ztron-wangrm-tools-scRNA-DataHub-scripts-test_data_all_formats-custom_10x_mtx-matrix.h5ad  storeData-ztron-wangrm-tools-scRNA-DataHub-scripts-test_data_all_formats-filtered_feature_bc_matrix-matrix.h5ad  storeData-ztron-wangrm-tools-scRNA-DataHub-scripts-test_data_all_formats-hg19_chr21-matrix.h5ad
src/: __init__.py  universal_reader.py
tests/: test_universal_reader.py
