[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scrna-datahub"
version = "1.0.0"
description = "Universal single-cell RNA-seq data reader and converter"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Wang Ruiming", email = "your.email@example.com"}
]
keywords = ["single-cell", "RNA-seq", "data-processing", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
full = [
    "loompy>=3.0.6",
    "zarr>=2.10.0",
    "openpyxl>=3.0.0",
    "harmonypy>=0.0.9",
    "bbknn>=1.5.0",
    "scanorama>=1.7.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/yourusername/scRNA-DataHub"
Documentation = "https://github.com/yourusername/scRNA-DataHub/docs"
Repository = "https://github.com/yourusername/scRNA-DataHub"
"Bug Tracker" = "https://github.com/yourusername/scRNA-DataHub/issues"

[project.scripts]
scrna-datahub = "universal_reader:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

